minor changes background

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -20,6 +20,26 @@ note = {Date accessed: 2018-02-15},
 howpublished = {\url{https://www.owasp.org/index.php/OWASP_Internet_of_Things_Project}}
 }
 
+@techreport{RFC7617,
+author = {J. Reschke},
+title = {The 'Basic' HTTP Authentication Scheme},
+howpublished = {Internet Requests for Comments},
+type = {RFC},
+number = {7617},
+year = {2015},
+month = {September},
+issn = {2070-1721},
+publisher = {RFC Editor},
+institution = {RFC Editor},
+}
+		    
+@misc{basic_01,
+title = {Is BASIC-Auth secure if done over HTTPS?},
+author = {Avi Douglen},
+note = {Date accessed: 2018-05-15},
+howpublished = {\url{https://security.stackexchange.com/questions/988/is-basic-auth-secure-if-done-over-https}}
+}
+
 @misc{orange,
 author = {Orange},
 title = {the future of digital trust},
